--- a/.github/workflows/deploytoECR.yml
+++ b/.github/workflows/deploytoECR.yml
@@ -35,8 +35,8 @@ jobs:
     - name: Build, tag, and push image to Amazon ECR
       env:
         ECR_REGISTRY: ${{ steps.login-ecr.outputs.registry }}
-        ECR_REPOSITORY: docker_nodejs_demo
-        IMAGE_TAG: githubactions
+        ECR_REPOSITORY: githubactions
+        IMAGE_TAG: 1
       run: |
         docker build -t $ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG .
         docker push $ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG
