--- a/.github/workflows/deploytoECR.yml
+++ b/.github/workflows/deploytoECR.yml
@@ -36,7 +36,7 @@ jobs:
       env:
         ECR_REGISTRY: ${{ steps.login-ecr.outputs.registry }}
         ECR_REPOSITORY: githubactions
-        IMAGE_TAG: 1
+        IMAGE_TAG: $GITHUB_RUN_ID
       run: |
         docker build -t $ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG .
         docker push $ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG
